k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prism0
  labels:
    app.kubernetes.io/name: prism0
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  selector:
    app.kubernetes.io/name: prism0
  ports:
    - name: http
      port: 80
      targetPort: http
